Fixed contact component alignment

--- a/src/components/about/about.styles.css
+++ b/src/components/about/about.styles.css
@@ -2,6 +2,6 @@
     width: 300px !important;
 }
 
-.floatLeft {
+.text-align-left {
     text-align: left;
 }
